--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,6 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/inputs_backgrounds"
         android:text="Login"
         android:textSize="36sp"
         android:textStyle="bold"
@@ -44,6 +43,7 @@
     <EditText
         android:id="@+id/inputPassword"
         android:layout_height="wrap_content"
+        android:layout_width="0dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/inputs_backgrounds"
         android:drawableLeft="@drawable/icon_password"
@@ -60,13 +60,14 @@
         app:layout_constraintTop_toBottomOf="@+id/inputName" />
 
     <Button
-        android:id="@+id/loing_btn"
+        android:id="@+id/login_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:background="@drawable/buttons_shape"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="@+id/inputPassword"
         app:layout_constraintStart_toStartOf="@+id/inputPassword"
-        tools:layout_editor_absoluteY="405dp" />
+        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
