--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,44 +7,43 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
+
+
+
     <LinearLayout
         android:id="@+id/linear"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="right">
-
-
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/searchFloatingButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            app:fabSize="mini"
-            android:src="@drawable/search_icon"/>
-
+        android:gravity="right"
+        android:weightSum="2">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/addFloatingButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|left"
-            android:layout_margin="16dp"
+            android:layout_margin="17dp"
             android:src="@drawable/add_icon"
-            app:fabSize="mini" />
+            app:fabSize="mini"
+            android:layout_weight="1"/>
+
+
+
 
         <TextView
+            android:layout_weight="1"
             android:id="@+id/tools_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|left"
-            android:layout_margin="16dp"
+            android:layout_margin="15dp"
             android:gravity="center_horizontal"
             android:text="כל הכלים: "
             android:textSize="25sp"
             android:textStyle="bold" />
     </LinearLayout>
+
 
     <ListView
         android:id="@+id/list_view"
